Correções e Criação Listar Pedidos